--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agnostic-web-foundation-react-class-demo",
+  "name": "voodux-react-class-demo",
   "version": "0.0.1",
   "build": 0,
   "author": {
@@ -10,7 +10,7 @@
   "contributors": [],
   "repository": {
     "type": "git",
-    "url": "https://github.com/web2solutions/agnostic-web-foundation-react-class-demo.git"
+    "url": "https://github.com/web2solutions/voodux-react-class-demo.git"
   },
   "license": "MIT",
   "main": "main.js",
@@ -75,5 +75,5 @@
     "recharts": "^2.0.4",
     "sweetalert": "^2.1.2"
   },
-  "description": "React application (Class based components) demo leveraging the [Agnostic Web Foundation](https://github.com/web2solutions/agnostic-web-foundation) as it underlying architecture to handle it data."
+  "description": "React application (Class based components) demo leveraging the [voodux](https://github.com/web2solutions/voodux) as it underlying architecture to handle it data."
 }
